--- a/map area.html
+++ b/map area.html
@@ -21,7 +21,7 @@
   <body>
     <button id="calculate-area-button">Calculate Area</button>
     <div id="map"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key={KEY}&libraries=places&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDu9WmzWfQnxsqJhWLE8CTMlSYB0VRUrkg&libraries=places&callback=initMap" async defer></script>
 
     <script>
         let map;
